--- a/simdistserve/benchmarks/figure11-abalation/03-draw-slo-abalation.ipynb
+++ b/simdistserve/benchmarks/figure11-abalation/03-draw-slo-abalation.ipynb
@@ -73,10 +73,10 @@
     "namespaces = []\n",
     "for latency_file_path, experiment_log_path in zip(latency_file_paths, experiment_log_paths):\n",
     "    # read experiment_log_path and log the namespace\n",
-    "    with open(experiment_log_path, 'r') as f:\n",
-    "        exp_args = f.read()\n",
-    "        exp_args = eval(exp_args)\n",
-    "        namespaces.append(exp_args)\n",
+    "    # with open(experiment_log_path, 'r') as f:\n",
+    "    #     exp_args = f.read()\n",
+    "    #     exp_args = eval(exp_args)\n",
+    "    #     namespaces.append(exp_args)\n",
     "\n",
     "    df = pd.read_csv(latency_file_path)\n",
     "    dfs.append(df)"
