Fix a bug on empty dataset read

--- a/simdistserve/benchmarks/figure11-abalation/02-draw-rate-abalation.ipynb
+++ b/simdistserve/benchmarks/figure11-abalation/02-draw-rate-abalation.ipynb
@@ -73,7 +73,10 @@
     "    #     exp_args = eval(exp_args)\n",
     "    #     namespaces.append(exp_args)\n",
     "\n",
-    "    df = pd.read_csv(latency_file_path)\n",
+    "    try:\n",
+    "        df = pd.read_csv(latency_file_path)\n",
+    "    except pd.errors.EmptyDataError:\n",
+    "        pass\n",
     "    dfs.append(df)"
    ],
    "metadata": {
