--- a/simdistserve/benchmarks/figure11-abalation/03-draw-slo-abalation.ipynb
+++ b/simdistserve/benchmarks/figure11-abalation/03-draw-slo-abalation.ipynb
@@ -84,9 +84,10 @@
     "\n",
     "    try:\n",
     "        df = pd.read_csv(latency_file_path)\n",
+    "        dfs.append(df)\n",
     "    except pd.errors.EmptyDataError:\n",
     "        pass\n",
-    "    dfs.append(df)"
+    "    "
    ],
    "metadata": {
     "collapsed": false
