Update the plotly condition

--- a/simdistserve/benchmarks/figure11-abalation/02-draw-rate-abalation.ipynb
+++ b/simdistserve/benchmarks/figure11-abalation/02-draw-rate-abalation.ipynb
@@ -20,7 +20,14 @@
     "if not is_notebook_mode:\n",
     "    args = parse_args()\n",
     "    target = args.target\n",
-    "target = eval(target)"
+    "target = eval(target)\n",
+    "\n",
+    "use_plotly = False\n",
+    "try:\n",
+    "    import plotly.graph_objects as go\n",
+    "    use_plotly = is_notebook_mode\n",
+    "except:\n",
+    "    pass"
    ],
    "metadata": {
     "collapsed": false,
@@ -1622,40 +1629,41 @@
     }
    ],
    "source": [
-    "# Plot the `figure_11_distserve_high`for some configurations\n",
-    "# tp_prefill = 1, pp_prefill = 1, tp_decode = 1, pp_decode = 1\n",
-    "# x-axis: rate\n",
-    "# y-axis: attainment\n",
-    "# find all combination of tp_prefill, pp_prefill, tp_decode, pp_decode\n",
-    "import plotly.graph_objects as go\n",
+    "if use_plotly:\n",
+    "    # Plot the `figure_11_distserve_high`for some configurations\n",
+    "    # tp_prefill = 1, pp_prefill = 1, tp_decode = 1, pp_decode = 1\n",
+    "    # x-axis: rate\n",
+    "    # y-axis: attainment\n",
+    "    # find all combination of tp_prefill, pp_prefill, tp_decode, pp_decode\n",
+    "    import plotly.graph_objects as go\n",
+    "    \n",
+    "    fig = go.Figure()\n",
+    "    configs = figure_11_distserve_high[['tp_prefill', 'pp_prefill', 'tp_decode', 'pp_decode']].drop_duplicates()\n",
+    "    df = figure_11_distserve_high\n",
+    "    \n",
+    "    for tp_prefill, pp_prefill, tp_decode, pp_decode in configs.values:\n",
+    "        config_df = df[\n",
+    "            (df['tp_prefill'] == tp_prefill) & (df['pp_prefill'] == pp_prefill) &\n",
+    "            (df['tp_decode'] == tp_decode) & (df['pp_decode'] == pp_decode)\n",
+    "            ]\n",
+    "        # plot this inside a plotly plot\n",
+    "        fig.add_trace(go.Scatter(\n",
+    "            x=config_df['per_gpu_rate'], y=config_df['attainment'],\n",
+    "            mode='lines+markers', name=f\"p{tp_prefill}{pp_prefill}{tp_decode}{pp_decode}-distserve\"\n",
+    "        ))\n",
+    "    \n",
+    "    # fig add title\n",
+    "    fig.update_layout(\n",
+    "        title=\"DistServe\",\n",
+    "        xaxis_title=\"Per-GPU Rate (tokens/s)\",\n",
+    "        yaxis_title=\"Attainment (%)\",\n",
+    "        legend_title=\"Configuration\"\n",
+    "    )\n",
     "\n",
-    "fig = go.Figure()\n",
-    "configs = figure_11_distserve_high[['tp_prefill', 'pp_prefill', 'tp_decode', 'pp_decode']].drop_duplicates()\n",
-    "df = figure_11_distserve_high\n",
-    "\n",
-    "for tp_prefill, pp_prefill, tp_decode, pp_decode in configs.values:\n",
-    "    config_df = df[\n",
-    "        (df['tp_prefill'] == tp_prefill) & (df['pp_prefill'] == pp_prefill) &\n",
-    "        (df['tp_decode'] == tp_decode) & (df['pp_decode'] == pp_decode)\n",
-    "        ]\n",
-    "    # plot this inside a plotly plot\n",
-    "    fig.add_trace(go.Scatter(\n",
-    "        x=config_df['per_gpu_rate'], y=config_df['attainment'],\n",
-    "        mode='lines+markers', name=f\"p{tp_prefill}{pp_prefill}{tp_decode}{pp_decode}-distserve\"\n",
-    "    ))\n",
-    "\n",
-    "# fig add title\n",
-    "fig.update_layout(\n",
-    "    title=\"DistServe\",\n",
-    "    xaxis_title=\"Per-GPU Rate (tokens/s)\",\n",
-    "    yaxis_title=\"Attainment (%)\",\n",
-    "    legend_title=\"Configuration\"\n",
-    ")\n",
-    "\n",
-    "# Export to html\n",
-    "fig.write_html(\"visual/figure_11_distserve_high.html\")\n",
-    "if is_notebook_mode:\n",
-    "    fig.show()"
+    "    # Export to html\n",
+    "    fig.write_html(\"visual/figure_11_distserve_high.html\")\n",
+    "    if is_notebook_mode:\n",
+    "        fig.show()"
    ],
    "metadata": {
     "collapsed": false,
@@ -2646,38 +2654,39 @@
     }
    ],
    "source": [
-    "# Plot the `figure_11_vllm_high`for some configurations\n",
-    "# tp_prefill = 1, pp_prefill = 1\n",
-    "# x-axis: rate\n",
-    "# y-axis: attainment\n",
-    "# find all combination of tp_prefill, pp_prefill\n",
-    "import plotly.graph_objects as go\n",
-    "\n",
-    "fig = go.Figure()\n",
-    "configs = figure_11_vllm_high[['tp_prefill', 'pp_prefill']].drop_duplicates()\n",
-    "df = figure_11_vllm_high\n",
-    "\n",
-    "for tp_prefill, pp_prefill in configs.values:\n",
-    "    config_df = df[\n",
-    "        (df['tp_prefill'] == tp_prefill) & (df['pp_prefill'] == pp_prefill)\n",
-    "        ]\n",
-    "    # plot this inside a plotly plot\n",
-    "    fig.add_trace(go.Scatter(\n",
-    "        x=config_df['per_gpu_rate'], y=config_df['attainment'],\n",
-    "        mode='lines+markers', name=f\"p{tp_prefill}{pp_prefill}-vllm\"\n",
-    "    ))\n",
-    "\n",
-    "# fig add title\n",
-    "fig.update_layout(\n",
-    "    title=\"vLLM++\",\n",
-    "    xaxis_title=\"Per-GPU Rate (tokens/s)\",\n",
-    "    yaxis_title=\"Attainment (%)\",\n",
-    "    legend_title=\"Configuration\"\n",
-    ")\n",
-    "# Export to html\n",
-    "fig.write_html(\"visual/figure_11_vllm_high.html\")\n",
-    "if is_notebook_mode:\n",
-    "    fig.show()"
+    "if use_plotly:\n",
+    "    # Plot the `figure_11_vllm_high`for some configurations\n",
+    "    # tp_prefill = 1, pp_prefill = 1\n",
+    "    # x-axis: rate\n",
+    "    # y-axis: attainment\n",
+    "    # find all combination of tp_prefill, pp_prefill\n",
+    "    import plotly.graph_objects as go\n",
+    "    \n",
+    "    fig = go.Figure()\n",
+    "    configs = figure_11_vllm_high[['tp_prefill', 'pp_prefill']].drop_duplicates()\n",
+    "    df = figure_11_vllm_high\n",
+    "    \n",
+    "    for tp_prefill, pp_prefill in configs.values:\n",
+    "        config_df = df[\n",
+    "            (df['tp_prefill'] == tp_prefill) & (df['pp_prefill'] == pp_prefill)\n",
+    "            ]\n",
+    "        # plot this inside a plotly plot\n",
+    "        fig.add_trace(go.Scatter(\n",
+    "            x=config_df['per_gpu_rate'], y=config_df['attainment'],\n",
+    "            mode='lines+markers', name=f\"p{tp_prefill}{pp_prefill}-vllm\"\n",
+    "        ))\n",
+    "    \n",
+    "    # fig add title\n",
+    "    fig.update_layout(\n",
+    "        title=\"vLLM++\",\n",
+    "        xaxis_title=\"Per-GPU Rate (tokens/s)\",\n",
+    "        yaxis_title=\"Attainment (%)\",\n",
+    "        legend_title=\"Configuration\"\n",
+    "    )\n",
+    "    # Export to html\n",
+    "    fig.write_html(\"visual/figure_11_vllm_high.html\")\n",
+    "    if is_notebook_mode:\n",
+    "        fig.show()"
    ],
    "metadata": {
     "collapsed": false,
@@ -4013,59 +4022,60 @@
     }
    ],
    "source": [
-    "import plotly.graph_objects as go\n",
-    "\n",
-    "fig = go.Figure()\n",
-    "\n",
-    "# Plot the `figure_11_distserve_high`for some configurations\n",
-    "# tp_prefill = 1, pp_prefill = 1, tp_decode = 1, pp_decode = 1\n",
-    "# x-axis: rate\n",
-    "# y-axis: attainment\n",
-    "# find all combination of tp_prefill, pp_prefill, tp_decode, pp_decode\n",
-    "\n",
-    "configs = figure_11_distserve_high[['tp_prefill', 'pp_prefill', 'tp_decode', 'pp_decode']].drop_duplicates()\n",
-    "df = figure_11_distserve_high\n",
-    "\n",
-    "for tp_prefill, pp_prefill, tp_decode, pp_decode in configs.values:\n",
-    "    config_df = df[\n",
-    "        (df['tp_prefill'] == tp_prefill) & (df['pp_prefill'] == pp_prefill) &\n",
-    "        (df['tp_decode'] == tp_decode) & (df['pp_decode'] == pp_decode)\n",
-    "        ]\n",
-    "    # plot this inside a plotly plot\n",
-    "    fig.add_trace(go.Scatter(\n",
-    "        x=config_df['per_gpu_rate'], y=config_df['attainment'],\n",
-    "        mode='lines+markers', name=f\"p{tp_prefill}{pp_prefill}{tp_decode}{pp_decode}-distserve\"\n",
-    "    ))\n",
-    "\n",
-    "# Plot the `figure_11_vllm_high`for some configurations\n",
-    "# tp_prefill = 1, pp_prefill = 1\n",
-    "# x-axis: rate\n",
-    "# y-axis: attainment\n",
-    "# find all combination of tp_prefill, pp_prefill\n",
-    "\n",
-    "configs = figure_11_vllm_high[['tp_prefill', 'pp_prefill']].drop_duplicates()\n",
-    "df = figure_11_vllm_high\n",
-    "\n",
-    "for tp_prefill, pp_prefill in configs.values:\n",
-    "    config_df = df[\n",
-    "        (df['tp_prefill'] == tp_prefill) & (df['pp_prefill'] == pp_prefill)\n",
-    "        ]\n",
-    "    # plot this inside a plotly plot\n",
-    "    fig.add_trace(go.Scatter(\n",
-    "        x=config_df['per_gpu_rate'], y=config_df['attainment'],\n",
-    "        mode='lines+markers', name=f\"p{tp_prefill}{pp_prefill}-vllm\"\n",
-    "    ))\n",
-    "\n",
-    "# fig add title\n",
-    "fig.update_layout(\n",
-    "    title=\"Figure 11: Abalation Study (DistServe and vLLM)\",\n",
-    "    xaxis_title=\"Per-GPU Rate (tokens/s)\",\n",
-    "    yaxis_title=\"Attainment (%)\",\n",
-    "    legend_title=\"Configuration\"\n",
-    ")\n",
-    "fig.write_html(\"visual/figure_11.full.html\")\n",
-    "if is_notebook_mode:\n",
-    "    fig.show()"
+    "if use_plotly:\n",
+    "    import plotly.graph_objects as go\n",
+    "    \n",
+    "    fig = go.Figure()\n",
+    "    \n",
+    "    # Plot the `figure_11_distserve_high`for some configurations\n",
+    "    # tp_prefill = 1, pp_prefill = 1, tp_decode = 1, pp_decode = 1\n",
+    "    # x-axis: rate\n",
+    "    # y-axis: attainment\n",
+    "    # find all combination of tp_prefill, pp_prefill, tp_decode, pp_decode\n",
+    "    \n",
+    "    configs = figure_11_distserve_high[['tp_prefill', 'pp_prefill', 'tp_decode', 'pp_decode']].drop_duplicates()\n",
+    "    df = figure_11_distserve_high\n",
+    "    \n",
+    "    for tp_prefill, pp_prefill, tp_decode, pp_decode in configs.values:\n",
+    "        config_df = df[\n",
+    "            (df['tp_prefill'] == tp_prefill) & (df['pp_prefill'] == pp_prefill) &\n",
+    "            (df['tp_decode'] == tp_decode) & (df['pp_decode'] == pp_decode)\n",
+    "            ]\n",
+    "        # plot this inside a plotly plot\n",
+    "        fig.add_trace(go.Scatter(\n",
+    "            x=config_df['per_gpu_rate'], y=config_df['attainment'],\n",
+    "            mode='lines+markers', name=f\"p{tp_prefill}{pp_prefill}{tp_decode}{pp_decode}-distserve\"\n",
+    "        ))\n",
+    "    \n",
+    "    # Plot the `figure_11_vllm_high`for some configurations\n",
+    "    # tp_prefill = 1, pp_prefill = 1\n",
+    "    # x-axis: rate\n",
+    "    # y-axis: attainment\n",
+    "    # find all combination of tp_prefill, pp_prefill\n",
+    "    \n",
+    "    configs = figure_11_vllm_high[['tp_prefill', 'pp_prefill']].drop_duplicates()\n",
+    "    df = figure_11_vllm_high\n",
+    "    \n",
+    "    for tp_prefill, pp_prefill in configs.values:\n",
+    "        config_df = df[\n",
+    "            (df['tp_prefill'] == tp_prefill) & (df['pp_prefill'] == pp_prefill)\n",
+    "            ]\n",
+    "        # plot this inside a plotly plot\n",
+    "        fig.add_trace(go.Scatter(\n",
+    "            x=config_df['per_gpu_rate'], y=config_df['attainment'],\n",
+    "            mode='lines+markers', name=f\"p{tp_prefill}{pp_prefill}-vllm\"\n",
+    "        ))\n",
+    "    \n",
+    "    # fig add title\n",
+    "    fig.update_layout(\n",
+    "        title=\"Figure 11: Abalation Study (DistServe and vLLM)\",\n",
+    "        xaxis_title=\"Per-GPU Rate (tokens/s)\",\n",
+    "        yaxis_title=\"Attainment (%)\",\n",
+    "        legend_title=\"Configuration\"\n",
+    "    )\n",
+    "    fig.write_html(\"visual/figure_11.full.html\")\n",
+    "    if is_notebook_mode:\n",
+    "        fig.show()"
    ],
    "metadata": {
     "collapsed": false,
@@ -5080,23 +5090,24 @@
     }
    ],
    "source": [
-    "import plotly.graph_objects as go\n",
-    "\n",
-    "fig = go.Figure()\n",
-    "add_plotly_trace(fig, figure_11_distserve_high, \"disthigh\")\n",
-    "add_plotly_trace(fig, figure_11_distserve_low, \"distlow\")\n",
-    "add_plotly_trace(fig, figure_11_vllm_high, \"vllm++\")\n",
-    "add_plotly_trace(fig, figure_11_vllm_low, \"vllm\")\n",
-    "fig.update_layout(\n",
-    "    title=\"Figure 11: Abalation Study (DistServe and vLLM)<br>\"\n",
-    "          \"<sup>The figure shows that DistHigh > DistLow > vLLM++ > vLLM (vLLM++ and vLLM overlaps) </sup>\",\n",
-    "    xaxis_title=\"Per-GPU Rate (tokens/s)\",\n",
-    "    yaxis_title=\"Attainment (%)\",\n",
-    "    legend_title=\"Configuration\"\n",
-    ")\n",
-    "fig.write_html(\"visual/figure_11.html\")\n",
-    "if is_notebook_mode:\n",
-    "    fig.show()\n"
+    "if use_plotly:\n",
+    "    import plotly.graph_objects as go\n",
+    "    \n",
+    "    fig = go.Figure()\n",
+    "    add_plotly_trace(fig, figure_11_distserve_high, \"disthigh\")\n",
+    "    add_plotly_trace(fig, figure_11_distserve_low, \"distlow\")\n",
+    "    add_plotly_trace(fig, figure_11_vllm_high, \"vllm++\")\n",
+    "    add_plotly_trace(fig, figure_11_vllm_low, \"vllm\")\n",
+    "    fig.update_layout(\n",
+    "        title=\"Figure 11: Abalation Study (DistServe and vLLM)<br>\"\n",
+    "              \"<sup>The figure shows that DistHigh > DistLow > vLLM++ > vLLM (vLLM++ and vLLM overlaps) </sup>\",\n",
+    "        xaxis_title=\"Per-GPU Rate (tokens/s)\",\n",
+    "        yaxis_title=\"Attainment (%)\",\n",
+    "        legend_title=\"Configuration\"\n",
+    "    )\n",
+    "    fig.write_html(\"visual/figure_11.html\")\n",
+    "    if is_notebook_mode:\n",
+    "        fig.show()\n"
    ],
    "metadata": {
     "collapsed": false,
