--- a/simdistserve/benchmarks/figure11-abalation/03-draw-slo-abalation.ipynb
+++ b/simdistserve/benchmarks/figure11-abalation/03-draw-slo-abalation.ipynb
@@ -20,7 +20,15 @@
     "    args = parse_args()\n",
     "    chosen_per_gpu_rate = args.per_gpu_rate\n",
     "    if args.target:\n",
-    "        target = eval(args.target)"
+    "        target = eval(args.target)\n",
+    "        \n",
+    "\n",
+    "use_plotly = False\n",
+    "try:\n",
+    "    import plotly.graph_objects as go\n",
+    "    use_plotly = is_notebook_mode\n",
+    "except:\n",
+    "    pass"
    ],
    "metadata": {
     "collapsed": false
@@ -297,40 +305,41 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "import plotly.graph_objects as go\n",
-    "\n",
-    "fig = go.Figure()\n",
-    "configs = figure_11_distserve_high[['tp_prefill', 'pp_prefill', 'tp_decode', 'pp_decode']].drop_duplicates()\n",
-    "slo_vals = list(big_df['slo'].unique())\n",
-    "\n",
-    "df = figure_11_distserve_high\n",
-    "for tp_prefill, pp_prefill, tp_decode, pp_decode in configs.values:\n",
-    "    config_df = df[\n",
-    "        (df['tp_prefill'] == tp_prefill) & (df['pp_prefill'] == pp_prefill) &\n",
-    "        (df['tp_decode'] == tp_decode) & (df['pp_decode'] == pp_decode)\n",
-    "        ]\n",
-    "    config_df = config_df.sort_values(by=['slo'], ascending=False)\n",
-    "    # plot this inside a plotly plot\n",
-    "    fig.add_trace(go.Scatter(\n",
-    "        x=config_df['slo'], y=config_df['attainment'],\n",
-    "        mode='lines+markers', name=f\"p{tp_prefill}{pp_prefill}{tp_decode}{pp_decode}-distserve\"\n",
-    "    ))\n",
-    "\n",
-    "# fig add title\n",
-    "fig.update_layout(\n",
-    "    title=\"DistServe\",\n",
-    "    xaxis_title=\"Per-GPU Rate (tokens/s)\",\n",
-    "    yaxis_title=\"Attainment (%)\",\n",
-    "    legend_title=\"Configuration\"\n",
-    ")\n",
-    "fig.update_layout(\n",
-    "    xaxis=dict(range=[max(slo_vals), min(slo_vals)]),\n",
-    ")  # Set the range manually\n",
-    "\n",
-    "# Export to html\n",
-    "fig.write_html(\"visual/figure_11_distserve_high.slo.html\")\n",
-    "if is_notebook_mode:\n",
-    "    fig.show()"
+    "if use_plotly:\n",
+    "    import plotly.graph_objects as go\n",
+    "    \n",
+    "    fig = go.Figure()\n",
+    "    configs = figure_11_distserve_high[['tp_prefill', 'pp_prefill', 'tp_decode', 'pp_decode']].drop_duplicates()\n",
+    "    slo_vals = list(big_df['slo'].unique())\n",
+    "    \n",
+    "    df = figure_11_distserve_high\n",
+    "    for tp_prefill, pp_prefill, tp_decode, pp_decode in configs.values:\n",
+    "        config_df = df[\n",
+    "            (df['tp_prefill'] == tp_prefill) & (df['pp_prefill'] == pp_prefill) &\n",
+    "            (df['tp_decode'] == tp_decode) & (df['pp_decode'] == pp_decode)\n",
+    "            ]\n",
+    "        config_df = config_df.sort_values(by=['slo'], ascending=False)\n",
+    "        # plot this inside a plotly plot\n",
+    "        fig.add_trace(go.Scatter(\n",
+    "            x=config_df['slo'], y=config_df['attainment'],\n",
+    "            mode='lines+markers', name=f\"p{tp_prefill}{pp_prefill}{tp_decode}{pp_decode}-distserve\"\n",
+    "        ))\n",
+    "    \n",
+    "    # fig add title\n",
+    "    fig.update_layout(\n",
+    "        title=\"DistServe\",\n",
+    "        xaxis_title=\"Per-GPU Rate (tokens/s)\",\n",
+    "        yaxis_title=\"Attainment (%)\",\n",
+    "        legend_title=\"Configuration\"\n",
+    "    )\n",
+    "    fig.update_layout(\n",
+    "        xaxis=dict(range=[max(slo_vals), min(slo_vals)]),\n",
+    "    )  # Set the range manually\n",
+    "    \n",
+    "    # Export to html\n",
+    "    fig.write_html(\"visual/figure_11_distserve_high.slo.html\")\n",
+    "    if is_notebook_mode:\n",
+    "        fig.show()"
    ],
    "metadata": {
     "collapsed": false
@@ -342,39 +351,40 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "import plotly.graph_objects as go\n",
-    "\n",
-    "fig = go.Figure()\n",
-    "configs = figure_11_vllm_high[['tp_prefill', 'pp_prefill']].drop_duplicates()\n",
-    "slo_vals = list(big_df['slo'].unique())\n",
-    "\n",
-    "df = figure_11_vllm_high\n",
-    "for tp_prefill, pp_prefill in configs.values:\n",
-    "    config_df = df[\n",
-    "        (df['tp_prefill'] == tp_prefill) & (df['pp_prefill'] == pp_prefill)\n",
-    "        ]\n",
-    "    config_df = config_df.sort_values(by=['slo'], ascending=False)\n",
-    "    # plot this inside a plotly plot\n",
-    "    fig.add_trace(go.Scatter(\n",
-    "        x=config_df['slo'], y=config_df['attainment'],\n",
-    "        mode='lines+markers', name=f\"p{tp_prefill}{pp_prefill}-vLLM\"\n",
-    "    ))\n",
-    "\n",
-    "# fig add title\n",
-    "fig.update_layout(\n",
-    "    title=\"vLLM\",\n",
-    "    xaxis_title=\"Per-GPU Rate (tokens/s)\",\n",
-    "    yaxis_title=\"Attainment (%)\",\n",
-    "    legend_title=\"Configuration\"\n",
-    ")\n",
-    "fig.update_layout(\n",
-    "    xaxis=dict(range=[max(slo_vals), min(slo_vals)]),\n",
-    ")  # Set the range manually\n",
-    "\n",
-    "fig.write_html(\"visual/figure_11_vllm_high.slo.html\")\n",
-    "if is_notebook_mode:\n",
-    "    fig.show()\n",
-    "# Export to html"
+    "if use_plotly:\n",
+    "    import plotly.graph_objects as go\n",
+    "    \n",
+    "    fig = go.Figure()\n",
+    "    configs = figure_11_vllm_high[['tp_prefill', 'pp_prefill']].drop_duplicates()\n",
+    "    slo_vals = list(big_df['slo'].unique())\n",
+    "    \n",
+    "    df = figure_11_vllm_high\n",
+    "    for tp_prefill, pp_prefill in configs.values:\n",
+    "        config_df = df[\n",
+    "            (df['tp_prefill'] == tp_prefill) & (df['pp_prefill'] == pp_prefill)\n",
+    "            ]\n",
+    "        config_df = config_df.sort_values(by=['slo'], ascending=False)\n",
+    "        # plot this inside a plotly plot\n",
+    "        fig.add_trace(go.Scatter(\n",
+    "            x=config_df['slo'], y=config_df['attainment'],\n",
+    "            mode='lines+markers', name=f\"p{tp_prefill}{pp_prefill}-vLLM\"\n",
+    "        ))\n",
+    "    \n",
+    "    # fig add title\n",
+    "    fig.update_layout(\n",
+    "        title=\"vLLM\",\n",
+    "        xaxis_title=\"Per-GPU Rate (tokens/s)\",\n",
+    "        yaxis_title=\"Attainment (%)\",\n",
+    "        legend_title=\"Configuration\"\n",
+    "    )\n",
+    "    fig.update_layout(\n",
+    "        xaxis=dict(range=[max(slo_vals), min(slo_vals)]),\n",
+    "    )  # Set the range manually\n",
+    "    \n",
+    "    fig.write_html(\"visual/figure_11_vllm_high.slo.html\")\n",
+    "    if is_notebook_mode:\n",
+    "        fig.show()\n",
+    "    # Export to html"
    ],
    "metadata": {
     "collapsed": false
@@ -386,54 +396,55 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "import plotly.graph_objects as go\n",
-    "\n",
-    "fig = go.Figure()\n",
-    "configs = figure_11_distserve_high[['tp_prefill', 'pp_prefill', 'tp_decode', 'pp_decode']].drop_duplicates()\n",
-    "slo_vals = list(big_df['slo'].unique())\n",
-    "\n",
-    "df = figure_11_distserve_high\n",
-    "for tp_prefill, pp_prefill, tp_decode, pp_decode in configs.values:\n",
-    "    config_df = df[\n",
-    "        (df['tp_prefill'] == tp_prefill) & (df['pp_prefill'] == pp_prefill) &\n",
-    "        (df['tp_decode'] == tp_decode) & (df['pp_decode'] == pp_decode)\n",
-    "        ]\n",
-    "    config_df = config_df.sort_values(by=['slo'], ascending=False)\n",
-    "    # plot this inside a plotly plot\n",
-    "    fig.add_trace(go.Scatter(\n",
-    "        x=config_df['slo'], y=config_df['attainment'],\n",
-    "        mode='lines+markers', name=f\"p{tp_prefill}{pp_prefill}{tp_decode}{pp_decode}-distserve\"\n",
-    "    ))\n",
-    "\n",
-    "configs = figure_11_vllm_high[['tp_prefill', 'pp_prefill']].drop_duplicates()\n",
-    "slo_vals = list(big_df['slo'].unique())\n",
-    "\n",
-    "df = figure_11_vllm_high\n",
-    "for tp_prefill, pp_prefill in configs.values:\n",
-    "    config_df = df[\n",
-    "        (df['tp_prefill'] == tp_prefill) & (df['pp_prefill'] == pp_prefill)\n",
-    "        ]\n",
-    "    config_df = config_df.sort_values(by=['slo'], ascending=False)\n",
-    "    # plot this inside a plotly plot\n",
-    "    fig.add_trace(go.Scatter(\n",
-    "        x=config_df['slo'], y=config_df['attainment'],\n",
-    "        mode='lines+markers', name=f\"p{tp_prefill}{pp_prefill}-vLLM\"\n",
-    "    ))\n",
-    "\n",
-    "# fig add title\n",
-    "fig.update_layout(\n",
-    "    title=\"DistServe and vLLM\",\n",
-    "    xaxis_title=\"Per-GPU Rate (tokens/s)\",\n",
-    "    yaxis_title=\"Attainment (%)\",\n",
-    "    legend_title=\"Configuration\"\n",
-    ")\n",
-    "fig.update_layout(\n",
-    "    xaxis=dict(range=[max(slo_vals), min(slo_vals)]),\n",
-    ")  # Set the range manually\n",
-    "fig.write_html(\"visual/figure_11_distserve_vllm_high.slo.html\")\n",
-    "if is_notebook_mode:\n",
-    "    fig.show()\n",
-    "# Export to html"
+    "if use_plotly:\n",
+    "    import plotly.graph_objects as go\n",
+    "    \n",
+    "    fig = go.Figure()\n",
+    "    configs = figure_11_distserve_high[['tp_prefill', 'pp_prefill', 'tp_decode', 'pp_decode']].drop_duplicates()\n",
+    "    slo_vals = list(big_df['slo'].unique())\n",
+    "    \n",
+    "    df = figure_11_distserve_high\n",
+    "    for tp_prefill, pp_prefill, tp_decode, pp_decode in configs.values:\n",
+    "        config_df = df[\n",
+    "            (df['tp_prefill'] == tp_prefill) & (df['pp_prefill'] == pp_prefill) &\n",
+    "            (df['tp_decode'] == tp_decode) & (df['pp_decode'] == pp_decode)\n",
+    "            ]\n",
+    "        config_df = config_df.sort_values(by=['slo'], ascending=False)\n",
+    "        # plot this inside a plotly plot\n",
+    "        fig.add_trace(go.Scatter(\n",
+    "            x=config_df['slo'], y=config_df['attainment'],\n",
+    "            mode='lines+markers', name=f\"p{tp_prefill}{pp_prefill}{tp_decode}{pp_decode}-distserve\"\n",
+    "        ))\n",
+    "    \n",
+    "    configs = figure_11_vllm_high[['tp_prefill', 'pp_prefill']].drop_duplicates()\n",
+    "    slo_vals = list(big_df['slo'].unique())\n",
+    "    \n",
+    "    df = figure_11_vllm_high\n",
+    "    for tp_prefill, pp_prefill in configs.values:\n",
+    "        config_df = df[\n",
+    "            (df['tp_prefill'] == tp_prefill) & (df['pp_prefill'] == pp_prefill)\n",
+    "            ]\n",
+    "        config_df = config_df.sort_values(by=['slo'], ascending=False)\n",
+    "        # plot this inside a plotly plot\n",
+    "        fig.add_trace(go.Scatter(\n",
+    "            x=config_df['slo'], y=config_df['attainment'],\n",
+    "            mode='lines+markers', name=f\"p{tp_prefill}{pp_prefill}-vLLM\"\n",
+    "        ))\n",
+    "    \n",
+    "    # fig add title\n",
+    "    fig.update_layout(\n",
+    "        title=\"DistServe and vLLM\",\n",
+    "        xaxis_title=\"Per-GPU Rate (tokens/s)\",\n",
+    "        yaxis_title=\"Attainment (%)\",\n",
+    "        legend_title=\"Configuration\"\n",
+    "    )\n",
+    "    fig.update_layout(\n",
+    "        xaxis=dict(range=[max(slo_vals), min(slo_vals)]),\n",
+    "    )  # Set the range manually\n",
+    "    fig.write_html(\"visual/figure_11_distserve_vllm_high.slo.html\")\n",
+    "    if is_notebook_mode:\n",
+    "        fig.show()\n",
+    "    # Export to html"
    ],
    "metadata": {
     "collapsed": false
@@ -488,26 +499,27 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "import plotly.graph_objects as go\n",
-    "\n",
-    "fig = go.Figure()\n",
-    "add_plotly_trace(fig, figure_11_distserve_high, \"disthigh\")\n",
-    "add_plotly_trace(fig, figure_11_distserve_low, \"distlow\")\n",
-    "add_plotly_trace(fig, figure_11_vllm_high, \"vllm++\")\n",
-    "add_plotly_trace(fig, figure_11_vllm_low, \"vllm\")\n",
-    "fig.update_layout(\n",
-    "    title=f\"Figure 11: Abalation Study - SLO with per-GPU rate = {chosen_per_gpu_rate}\"\n",
-    "          f\"<br>\"\n",
-    "          f\"<sup>\"\n",
-    "          f\"The figure shows that DistHigh > DistLow > vLLM++ > vLLM (vLLM++ and vLLM overlaps) </sup>\",\n",
-    "    xaxis_title=\"Per-GPU Rate (tokens/s)\",\n",
-    "    yaxis_title=\"Attainment (%)\",\n",
-    "    xaxis=dict(range=[max(slo_vals), min(slo_vals)]),\n",
-    "    legend_title=\"Configuration\"\n",
-    ")\n",
-    "fig.write_html(\"visual/figure_11b.html\")\n",
-    "if is_notebook_mode:\n",
-    "    fig.show()"
+    "if use_plotly:\n",
+    "    import plotly.graph_objects as go\n",
+    "    \n",
+    "    fig = go.Figure()\n",
+    "    add_plotly_trace(fig, figure_11_distserve_high, \"disthigh\")\n",
+    "    add_plotly_trace(fig, figure_11_distserve_low, \"distlow\")\n",
+    "    add_plotly_trace(fig, figure_11_vllm_high, \"vllm++\")\n",
+    "    add_plotly_trace(fig, figure_11_vllm_low, \"vllm\")\n",
+    "    fig.update_layout(\n",
+    "        title=f\"Figure 11: Abalation Study - SLO with per-GPU rate = {chosen_per_gpu_rate}\"\n",
+    "              f\"<br>\"\n",
+    "              f\"<sup>\"\n",
+    "              f\"The figure shows that DistHigh > DistLow > vLLM++ > vLLM (vLLM++ and vLLM overlaps) </sup>\",\n",
+    "        xaxis_title=\"Per-GPU Rate (tokens/s)\",\n",
+    "        yaxis_title=\"Attainment (%)\",\n",
+    "        xaxis=dict(range=[max(slo_vals), min(slo_vals)]),\n",
+    "        legend_title=\"Configuration\"\n",
+    "    )\n",
+    "    fig.write_html(\"visual/figure_11b.html\")\n",
+    "    if is_notebook_mode:\n",
+    "        fig.show()"
    ],
    "metadata": {
     "collapsed": false
